| Bug #46114 | ndb_mgm "help" does not show help for all commands | ||
|---|---|---|---|
| Submitted: | 10 Jul 2009 15:33 | Modified: | 5 Mar 2010 11:37 |
| Reporter: | Johan Andersson | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Cluster: Cluster (NDB) storage engine | Severity: | S3 (Non-critical) |
| Version: | mysql-5.1-telco-7.0 | OS: | Any |
| Assigned to: | Magnus Blåudd | CPU Architecture: | Any |
| Tags: | 7.0.6, NDB_MGM | ||
[10 Jul 2009 19:59]
Sveta Smirnova
Thank you for the report. Verified as described.
[4 Mar 2010 12:49]
Magnus Blåudd
The help text is still there but is unfortunately truncated after 1023 chars due to a bug in 'my_vfprintf' in OutputStream.cpp
[4 Mar 2010 13:00]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/102312
[4 Mar 2010 15:15]
Bugs System
Pushed into 5.1.41-ndb-7.0.14 (revid:magnus.blaudd@sun.com-20100304143500-s7ofn4cdyh6d7wg0) (version source revid:magnus.blaudd@sun.com-20100304125958-e7z5ut78xvln6d77) (merge vers: 5.1.41-ndb-7.0.14) (pib:16)
[4 Mar 2010 15:18]
Magnus Blåudd
Pushed to 7.0.14 and 7.1.2-beta
[5 Mar 2010 11:37]
Jon Stephens
Documented bugfix in the NDB-7.0.14 and 7.1.2 changelogs as follows:
Information about several management client commands was missing
from (that is, truncated in) the output of the HELP command.
Closed.

Description: ndb_mgm> help Does not print anything about: START RESTART STOP etc See below: ndb_mgm> help --------------------------------------------------------------------------- NDB Cluster -- Management Client -- Help --------------------------------------------------------------------------- HELP Print help text HELP COMMAND Print detailed help for COMMAND(e.g. SHOW) SHOW Print information about cluster CREATE NODEGROUP <id>,<id>... Add a Nodegroup containing nodes DROP NODEGROUP <NG> Drop nodegroup with id NG START BACKUP [NOWAIT | WAIT STARTED | WAIT COMPLETED] START BACKUP [<backup id>] [NOWAIT | WAIT STARTED | WAIT COMPLETED] START BACKUP [<backup id>] [SNAPSHOTSTART | SNAPSHOTEND] [NOWAIT | WAIT STARTED | WAIT COMPLETED] Start backup (default WAIT COMPLETED,SNAPSHOTEND) ABORT BACKUP <backup id> Abort backup SHUTDOWN Shutdown all processes in cluster CLUSTERLOG ON [<severity>] ... Enable Clus <severity> = ALERT | CRITICAL | ERROR | WARNING | INFO | DEBUG <category> = STARTUP | SHUTDOWN | STATISTICS | CHECKPOINT | NODERESTART | CONNECTION | INFO | ERROR | CONGESTION | DEBUG | BACKUP <level> = 0 - 15 <id> = ALL | Any database node id For detailed help on COMMAND, use HELP COMMAND. How to repeat: ndb_mgm> HELP Suggested fix: add text for _all_ commands