Bug#46114 ndb_mgm "help" does not show help for all commands  - Remove the 'my_vfprintf' function and revert to use vfprintf - i.e like    it was before and which works fine in many other places